WP-8926 Gap between search box fixes

--- a/css/conditionals/blocks/gpcb-insights-search.css
+++ b/css/conditionals/blocks/gpcb-insights-search.css
@@ -92,9 +92,14 @@
   background: #f4f4f4;
   color: #666666;
   font-size: 20px;
-  width: 209px;
+  width: 222px;
   line-height: 1.5;
   padding: 7px 52px 6px 20px;
+}
+@media (min-width: 25.625em) and (max-width: 46em) and (orientation: portrait) {
+  #block-gsb-public-custom-blocks-gpcb-insights-search #edit-insights-search-keys {
+    width: 262px;
+  }
 }
 @media (min-width: 62.5em) {
   #block-gsb-public-custom-blocks-gpcb-insights-search #edit-insights-search-keys {
